fix: correctly wrap pipeinfodialog children in "no mouse events" element

--- a/src/renderer/components/PipeInfoDialog.scss
+++ b/src/renderer/components/PipeInfoDialog.scss
@@ -1,3 +1,3 @@
-.pipe-info-dialog * {
+.pipe-info-dialog-wrapper {
 	pointer-events: none;
 }
